# desc-gen3-prod

./: .gitignore  README.md  release-notes.md  setup.cfg
dg3prod/: __init__.py
doc/: app-g3wfpipe.md  app-g3wfquery.md
docker/gen3workflow/: .gitignore  README.md  build  docker-username.txt  dockerfile-05  dockerfile-06  dockerfile-07  dockerfile-08  dockerfile-09  dockerfile-10  dockerfile-11  dockerfile-12  dockerfile-13  dockerfile-14  dockerfile-15  dockerfile-16  dockerfile-17  lsst-version.txt  push  start
scripts/: build-iotrace  build-this  desc-gen3-prod-version  g3wf-check-cvmfs  g3wf-convert-lsst-version  g3wf-create-default-chain  g3wf-create-qg-repo  g3wf-create-qg-repo.py  g3wf-fsmonitor  g3wf-install-cvmfs  g3wf-install-parsl-w2332  g3wf-parsl-version  g3wf-query-dc2  g3wf-remove-cvmfs  g3wf-run-cvmfs  g3wf-run-shifter  g3wf-run-task  g3wf-setup-cvmfs  g3wf-strace  g3wf-strace-command  g3wf-strace-redirect  g3wfpipe-run  g3wfpipe-run.py  g3wfpipe-template  runapp-g3wfenv  runapp-g3wfpipe  runapp-g3wfquery
