[metadata]
name = desc-gen3-prod
version = 0.0.43.dev7
author = David Adams
author_email = dladams@bnl.gov
description = 'DESCprod interface to gen3-workflow'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LSSTDESC/desc-gen3-prod
project_urls =
    Bug Tracker = https://github.com/LSSTDESC/desc-gen3-prod/issues
classifiers =
    Programming Language :: Python :: 3
    License :: BSD 3-Clause
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
scripts = 
    scripts/desc-gen3-prod-version
    scripts/runapp-g3wfenv
    scripts/g3wf-parsl-version
    scripts/runapp-g3wfquery
    scripts/g3wf-convert-lsst-version
    scripts/g3wf-get-stdout
    scripts/g3wf-get-stderr
    scripts/g3wf-run-task
    scripts/g3wf-query-dc2
    scripts/g3wf-remove-cvmfs
    scripts/g3wf-check-cvmfs
    scripts/g3wf-install-cvmfs
    scripts/g3wf-install-parsl-w2332
    scripts/g3wf-run-cvmfs
    scripts/g3wf-run-shifter
    scripts/g3wf-setup-cvmfs
    scripts/g3wf-strace
    scripts/runapp-g3wfpipe
    scripts/g3wfpipe-template
    scripts/g3wfpipe-run
    scripts/g3wfpipe-run.py

[options.packages.find]

[options.entry_points]
console_scripts =
#    desc-gen3-prod-version=dg3prod:version
